--- a/index.html
+++ b/index.html
@@ -14,15 +14,11 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="n_items">Number of Items</label>
-                    <input type="number" id="n_items" value="50" min="1">
+                    <input type="number" id="n_items" value="12" min="1">
                 </div>
                 <div class="form-group">
                     <label for="capacity">Capacity</label>
                     <input type="number" id="capacity" value="100" min="1">
-                </div>
-                <div class="form-group">
-                    <label for="seed">Seed</label>
-                    <input type="text" id="seed" value="12345">
                 </div>
             </div>
 
@@ -93,6 +89,11 @@
                 </div>
             </div>
 
+            <div class="seed-row">
+                <label for="seed">Set Seed (optional)</label>
+                <input type="text" id="seed" value="12345" placeholder="e.g. 12345">
+            </div>
+
             <div class="button-row">
                 <button id="generate_btn" class="primary">Generate</button>
                 <button id="download_csv_btn">Download CSV</button>
@@ -104,6 +105,9 @@
         <div class="output-section hidden" id="output_section">
             <h2>Summary Statistics</h2>
             <div class="stats-grid" id="stats_grid"></div>
+
+            <h2>Optimal Solution</h2>
+            <div class="stats-grid" id="optimal_grid"></div>
 
             <h2>Preview (First 25 Items)</h2>
             <div class="table-container">
