Non-trivial constraint, target optimal size, collapsible item list

--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
                 </div>
             </div>
 
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="optimal_size">Items in Optimal Solution</label>
+                    <select id="optimal_size">
+                        <option value="random">Random</option>
+                    </select>
+                </div>
+            </div>
+
             <div class="seed-row">
                 <label for="seed">Set Seed (optional)</label>
                 <input type="text" id="seed" value="12345" placeholder="e.g. 12345">
