Rename distributions, add integer checkbox, support continuous values

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
                 <div class="form-group">
                     <label for="weight_dist">Weight Distribution</label>
                     <select id="weight_dist">
-                        <option value="uniform">UniformInt</option>
-                        <option value="normal">NormalInt</option>
-                        <option value="lognormal">LognormalInt</option>
+                        <option value="uniform">Uniform</option>
+                        <option value="normal">Normal</option>
+                        <option value="lognormal">Lognormal</option>
                     </select>
+                    <label class="int-checkbox"><input type="checkbox" id="weight_int" checked> Integer</label>
                 </div>
                 <div class="form-group params" id="weight_params">
                     <div class="param-group uniform-params">
@@ -51,10 +52,11 @@
                 <div class="form-group">
                     <label for="value_dist">Value Distribution</label>
                     <select id="value_dist">
-                        <option value="uniform">UniformInt</option>
-                        <option value="normal">NormalInt</option>
-                        <option value="lognormal">LognormalInt</option>
+                        <option value="uniform">Uniform</option>
+                        <option value="normal">Normal</option>
+                        <option value="lognormal">Lognormal</option>
                     </select>
+                    <label class="int-checkbox"><input type="checkbox" id="value_int" checked> Integer</label>
                 </div>
                 <div class="form-group params" id="value_params">
                     <div class="param-group uniform-params">
