Color correlation keywords, group dist rows without inner lines, rename title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <p class="intro">The <strong>0/1 knapsack problem</strong> models a simple but powerful choice environment: a decision-maker must pick a subset of items, each with a price and a value, to maximize total value without exceeding a fixed budget.</p>
 
-        <p class="intro">For behavioral economists, this structure is especially useful because it controls for preferences and provides a distance to an optimal solution. It can be used to study, for example, how people allocate scarce resources across competing options; whether they rely on heuristics rather than optimization; how limited attention or choice overload change decision quality; and how decisions respond to framing, time pressure, incentives, or feedback.</p>
+        <p class="intro">For behavioral economists, this structure is especially useful because it controls for preferences and provides a distance to an optimal solution. It can be used to study, for example, how people allocate scarce resources across competing options; whether they rely on heuristics rather than optimization; how limited attention or choice overload change decision quality; and how decisions respond to framing, time pressure, incentives, or complexity.</p>
 
         <p class="intro">Feel free to generate your own knapsack instances below, have fun! You can also set a seed for full reproducibility.</p>
 
