--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
 
-            <div class="form-row dist-row-last">
+            <div class="form-row dist-row-inner">
                 <div class="form-group">
                     <label for="correlation">Correlation <span class="info-icon" id="corr_info" tabindex="0">ⓘ<div class="info-tooltip">Controls how price and value relate.<br><strong style="color:#74b9ff">Independent:</strong> drawn separately.<br><strong style="color:#55efc4">Positive:</strong> value = α × price + noise. Costlier items tend to be more valuable — harder problem.<br><strong style="color:#fab1a0">Negative:</strong> value = α × (maxPrice − price) + noise. Cheaper items tend to be more valuable — easier problem.<br>Noise ~ Normal(0, noise_sd).</div></span></label>
                     <select id="correlation">
@@ -94,6 +94,17 @@
                         <label>α <input type="number" id="alpha" value="2" step="0.1"></label>
                         <label>Noise SD <input type="number" id="noise_sd" value="5" step="0.1" min="0"></label>
                     </div>
+                </div>
+            </div>
+
+            <div class="form-row dist-row-last">
+                <div class="form-group">
+                    <label for="ratio_spread">Ratio Spread <span class="info-icon" id="ratio_info" tabindex="0">ⓘ<div class="info-tooltip">Controls variance of value/price ratios across items.<br><strong style="color:#74b9ff">Low:</strong> ratios compressed toward the mean — items look similar, harder to distinguish good deals.<br><strong style="color:#dfe6e9">Medium:</strong> no adjustment (natural variance).<br><strong style="color:#fab1a0">High:</strong> ratios stretched apart — clear bargains and bad deals, easier to spot the optimal set.</div></span></label>
+                    <select id="ratio_spread">
+                        <option value="low">Low (λ=0.3)</option>
+                        <option value="medium" selected>Medium (λ=1.0)</option>
+                        <option value="high">High (λ=2.0)</option>
+                    </select>
                 </div>
             </div>
 
