Remove budget range stat, compact stats, add integer ratios checkbox

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
                         <option value="medium" selected>Medium (λ=1.0)</option>
                         <option value="high">High (λ=2.0)</option>
                     </select>
+                    <label class="int-checkbox"><input type="checkbox" id="integer_ratios"> integer ratios</label>
                 </div>
             </div>
 
