Add illustrative example image to description section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Feel free to generate your own knapsack instances below, have fun! You can also set a seed for full reproducibility.</p>
                 <div class="desc-figure">
                     <div class="desc-figure-caption">Illustrative Example</div>
-                    <img src="example.png" alt="Illustrative example of a knapsack problem">
+                    <img src="/Users/patricksewell/Desktop/#UPF/Research/knapsack-generator/full_kp.png" alt="Illustrative example of a knapsack problem">
                 </div>
             </div>
         </div>
