Add greedy proximity and forgiveness (N90) configurable filters

--- a/index.html
+++ b/index.html
@@ -148,6 +148,41 @@
                 </div>
             </div>
 
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="greedyCapSelect">Max greedy proximity to optimal <span class="info-icon" tabindex="0">ⓘ<div class="info-tooltip">Reject instances where the greedy solution is too close to optimal.<br><strong>Random:</strong> no filter.<br><strong>99%:</strong> reject if greedy ≥ 99% of OPT.<br>Lower % = stricter (greedy must be further from optimal).</div></span></label>
+                    <select id="greedyCapSelect">
+                        <option value="random">Random</option>
+                        <option value="1.00">100%</option>
+                        <option value="0.99">99%</option>
+                        <option value="0.98">98%</option>
+                        <option value="0.97">97%</option>
+                        <option value="0.96">96%</option>
+                        <option value="0.95">95%</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="forgivenessCapSelect">Max # feasible bundles within 90% of optimal <span class="info-icon" tabindex="0">ⓘ<div class="info-tooltip">Limits how many feasible subsets achieve ≥ 90% of optimal value.<br><strong>No limit:</strong> no filter.<br>Lower cap = fewer near-optimal alternatives = less "forgiving" instance.</div></span></label>
+                    <select id="forgivenessCapSelect">
+                        <option value="none">No limit</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                        <option value="20">20</option>
+                        <option value="25">25</option>
+                        <option value="30">30</option>
+                        <option value="35">35</option>
+                        <option value="40">40</option>
+                        <option value="45">45</option>
+                        <option value="50">50</option>
+                        <option value="75">75</option>
+                        <option value="100">100</option>
+                        <option value="150">150</option>
+                        <option value="200">200</option>
+                    </select>
+                </div>
+            </div>
+
             <div class="button-row">
                 <button id="generate_btn" class="primary">Generate</button>
                 <button id="download_csv_btn">Download CSV</button>
